@@ -1,3 +1,5 @@
+2009-12-12 Ali Erkan İMREK <alierkanimrek.gmail.com>
+     * Package sizes adding to files.xml
 2009-11-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
 	 * Packager name and email saved conf file
 2009-11-22 Ali Erkan İMREK <alierkanimrek.gmail.com>
@@ -5,4 +7,4 @@
 2009-11-16 Ali Erkan İMREK <alierkanimrek.gmail.com>
 	 * Version 0.1 released
 2009-10-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
-         * First upload 
+         * First upload
